--- a/Utilities/SEGSAdmin/SEGSAdminTool.ui
+++ b/Utilities/SEGSAdmin/SEGSAdminTool.ui
@@ -372,6 +372,9 @@
          <property name="autoFillBackground">
           <bool>false</bool>
          </property>
+         <property name="styleSheet">
+          <string notr="true">color: rgb(255, 255, 255);</string>
+         </property>
          <property name="readOnly">
           <bool>true</bool>
          </property>
@@ -724,7 +727,7 @@
      <x>0</x>
      <y>0</y>
      <width>1041</width>
-     <height>20</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHelp">
