--- a/Utilities/SEGSAdmin/SettingsDialog.ui
+++ b/Utilities/SEGSAdmin/SettingsDialog.ui
@@ -9,187 +9,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1009</width>
-    <height>617</height>
+    <width>870</width>
+    <height>478</height>
    </rect>
-  </property>
-  <property name="palette">
-   <palette>
-    <active>
-     <colorrole role="WindowText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>255</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Text">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>255</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="ButtonText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>255</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Base">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>30</red>
-        <green>30</green>
-        <blue>30</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Window">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>51</red>
-        <green>51</green>
-        <blue>51</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="PlaceholderText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="128">
-        <red>154</red>
-        <green>154</green>
-        <blue>154</blue>
-       </color>
-      </brush>
-     </colorrole>
-    </active>
-    <inactive>
-     <colorrole role="WindowText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>255</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Text">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>255</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="ButtonText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>255</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Base">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>30</red>
-        <green>30</green>
-        <blue>30</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Window">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>51</red>
-        <green>51</green>
-        <blue>51</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="PlaceholderText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="128">
-        <red>154</red>
-        <green>154</green>
-        <blue>154</blue>
-       </color>
-      </brush>
-     </colorrole>
-    </inactive>
-    <disabled>
-     <colorrole role="WindowText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>255</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Text">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>255</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="ButtonText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>255</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Base">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>51</red>
-        <green>51</green>
-        <blue>51</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Window">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>51</red>
-        <green>51</green>
-        <blue>51</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="PlaceholderText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="128">
-        <red>154</red>
-        <green>154</green>
-        <blue>154</blue>
-       </color>
-      </brush>
-     </colorrole>
-    </disabled>
-   </palette>
   </property>
   <property name="windowTitle">
    <string>Settings</string>
-  </property>
-  <property name="styleSheet">
-   <string notr="true">color: rgb(255, 255, 255);</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_10">
    <item row="1" column="5">
@@ -197,7 +22,7 @@
      <property name="minimumSize">
       <size>
        <width>80</width>
-       <height>25</height>
+       <height>21</height>
       </size>
      </property>
      <property name="maximumSize">
@@ -215,7 +40,7 @@
     <widget class="QPushButton" name="reset_defaults">
      <property name="minimumSize">
       <size>
-       <width>125</width>
+       <width>121</width>
        <height>21</height>
       </size>
      </property>
@@ -240,7 +65,7 @@
      </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>395</width>
+       <width>423</width>
        <height>20</height>
       </size>
      </property>
@@ -250,7 +75,7 @@
     <widget class="QPushButton" name="ip_auto_populate">
      <property name="minimumSize">
       <size>
-       <width>140</width>
+       <width>121</width>
        <height>21</height>
       </size>
      </property>
@@ -313,8 +138,8 @@
          </property>
          <property name="minimumSize">
           <size>
-           <width>360</width>
-           <height>190</height>
+           <width>357</width>
+           <height>141</height>
           </size>
          </property>
          <property name="maximumSize">
@@ -341,17 +166,14 @@
           </item>
           <item row="0" column="1">
            <widget class="QLineEdit" name="map_listen_ip">
-            <property name="minimumSize">
-             <size>
-              <width>50</width>
-              <height>25</height>
-             </size>
-            </property>
             <property name="maximumSize">
              <size>
               <width>108</width>
               <height>16777215</height>
              </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true"/>
             </property>
             <property name="inputMask">
              <string>000.000.000.000</string>
@@ -366,6 +188,9 @@
               <height>26</height>
              </size>
             </property>
+            <property name="styleSheet">
+             <string notr="true"/>
+            </property>
             <property name="minimum">
              <number>1024</number>
             </property>
@@ -379,7 +204,7 @@
             <property name="minimumSize">
              <size>
               <width>111</width>
-              <height>25</height>
+              <height>22</height>
              </size>
             </property>
             <property name="maximumSize">
@@ -387,6 +212,9 @@
               <width>300</width>
               <height>22</height>
              </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true"/>
             </property>
             <property name="placeholderText">
              <string>Text</string>
@@ -410,8 +238,11 @@
             <property name="minimumSize">
              <size>
               <width>0</width>
-              <height>25</height>
+              <height>26</height>
              </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true"/>
             </property>
             <property name="minimum">
              <number>1</number>
@@ -450,7 +281,7 @@
             <property name="minimumSize">
              <size>
               <width>70</width>
-              <height>25</height>
+              <height>20</height>
              </size>
             </property>
             <property name="maximumSize">
@@ -458,6 +289,9 @@
               <width>70</width>
               <height>20</height>
              </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true"/>
             </property>
             <property name="placeholderText">
              <string>0.00</string>
@@ -471,6 +305,9 @@
               <width>0</width>
               <height>26</height>
              </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true"/>
             </property>
             <property name="minimum">
              <number>1024</number>
@@ -506,17 +343,14 @@
           </item>
           <item row="1" column="1">
            <widget class="QLineEdit" name="map_location_ip">
-            <property name="minimumSize">
-             <size>
-              <width>50</width>
-              <height>25</height>
-             </size>
-            </property>
             <property name="maximumSize">
              <size>
               <width>108</width>
               <height>16777215</height>
              </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true"/>
             </property>
             <property name="inputMask">
              <string>000.000.000.000</string>
@@ -548,6 +382,9 @@
               <width>108</width>
               <height>20</height>
              </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true"/>
             </property>
             <property name="minimum">
              <number>1</number>
@@ -588,8 +425,8 @@
          </property>
          <property name="minimumSize">
           <size>
-           <width>360</width>
-           <height>190</height>
+           <width>359</width>
+           <height>181</height>
           </size>
          </property>
          <property name="maximumSize">
@@ -610,12 +447,6 @@
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
-            <property name="minimumSize">
-             <size>
-              <width>50</width>
-              <height>25</height>
-             </size>
-            </property>
             <property name="maximumSize">
              <size>
               <width>160</width>
@@ -627,6 +458,9 @@
               <width>0</width>
               <height>0</height>
              </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true"/>
             </property>
             <property name="inputMask">
              <string/>
@@ -656,6 +490,9 @@
               <height>26</height>
              </size>
             </property>
+            <property name="styleSheet">
+             <string notr="true"/>
+            </property>
             <property name="minimum">
              <number>1</number>
             </property>
@@ -671,6 +508,9 @@
               <width>61</width>
               <height>26</height>
              </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true"/>
             </property>
             <property name="minimum">
              <number>1024</number>
@@ -736,6 +576,9 @@
               <height>26</height>
              </size>
             </property>
+            <property name="styleSheet">
+             <string notr="true"/>
+            </property>
             <property name="minimum">
              <number>1024</number>
             </property>
@@ -749,7 +592,7 @@
             <property name="minimumSize">
              <size>
               <width>50</width>
-              <height>25</height>
+              <height>22</height>
              </size>
             </property>
             <property name="maximumSize">
@@ -757,6 +600,9 @@
               <width>160</width>
               <height>22</height>
              </size>
+            </property>
+            <property name="autoFillBackground">
+             <bool>false</bool>
             </property>
             <property name="inputMask">
              <string/>
@@ -783,8 +629,11 @@
             <property name="minimumSize">
              <size>
               <width>0</width>
-              <height>25</height>
+              <height>26</height>
              </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true"/>
             </property>
             <property name="minimum">
              <number>1</number>
@@ -841,17 +690,8 @@
             <layout class="QGridLayout" name="gridLayout_5">
              <item row="1" column="1">
               <widget class="QLineEdit" name="char_dbhost">
-               <property name="sizePolicy">
-                <sizepolicy hsizetype="Expanding" vsizetype="Maximum">
-                 <horstretch>0</horstretch>
-                 <verstretch>0</verstretch>
-                </sizepolicy>
-               </property>
-               <property name="minimumSize">
-                <size>
-                 <width>0</width>
-                 <height>25</height>
-                </size>
+               <property name="styleSheet">
+                <string notr="true"/>
                </property>
                <property name="inputMask">
                 <string/>
@@ -881,8 +721,11 @@
                <property name="minimumSize">
                 <size>
                  <width>0</width>
-                 <height>25</height>
+                 <height>26</height>
                 </size>
+               </property>
+               <property name="styleSheet">
+                <string notr="true"/>
                </property>
                <property name="minimum">
                 <number>1024</number>
@@ -972,11 +815,8 @@
              </item>
              <item row="1" column="1">
               <widget class="QLineEdit" name="acc_dbhost">
-               <property name="minimumSize">
-                <size>
-                 <width>0</width>
-                 <height>25</height>
-                </size>
+               <property name="styleSheet">
+                <string notr="true"/>
                </property>
                <property name="inputMask">
                 <string/>
@@ -1003,8 +843,11 @@
                <property name="minimumSize">
                 <size>
                  <width>0</width>
-                 <height>25</height>
+                 <height>26</height>
                 </size>
+               </property>
+               <property name="styleSheet">
+                <string notr="true"/>
                </property>
                <property name="minimum">
                 <number>1024</number>
@@ -1078,8 +921,8 @@
                 <height>16777215</height>
                </size>
               </property>
-              <property name="autoFillBackground">
-               <bool>false</bool>
+              <property name="styleSheet">
+               <string notr="true"/>
               </property>
               <property name="inputMask">
                <string/>
@@ -1112,6 +955,9 @@
                 <width>0</width>
                 <height>26</height>
                </size>
+              </property>
+              <property name="styleSheet">
+               <string notr="true"/>
               </property>
               <property name="minimum">
                <number>1024</number>
@@ -1903,7 +1749,7 @@
      <property name="minimumSize">
       <size>
        <width>80</width>
-       <height>25</height>
+       <height>21</height>
       </size>
      </property>
      <property name="maximumSize">
